test/testData/parser/negative/externInit.err
test/testData/parser/negative/externInit.c:2:12: error: 'extern' variable cannot have an initializer
test/testData/parser/negative/externInit.c:5:14: error: 'extern' variable cannot have an initializer
